package org.example.ioc.beans;

import lombok.*;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
public class PropertyValue {

    private String name;

    private String ref;

    private String value;
}
